--- a/vmtApp.css
+++ b/vmtApp.css
@@ -35,7 +35,7 @@ h3 {
 #wrapper {
 /*  position: absolute; /**/
     height:  595px;
-    width: 1200px;
+    width: 1250px;  /* was: 1200px */
 	margin: 20px auto;
 /*  margin-left: 50px;
     margin-right: 50px;
@@ -143,7 +143,7 @@ h3 {
 #right_container {	
 	float: right;  
 /*	margin-left: 570px;  /**/
-	width: 670px;
+	width: 720px;   /* was: 670px; */
 	padding: 0 0 0 10px;
 	margin-top: 2px;	
 }
@@ -177,15 +177,18 @@ h3 {
 	display: none;
 }
 
-#vmt_grid, #vht_grid, #voc_grid, #nox_grid, #co_grid,#co2_grid {
+#grid_2016,#grid_2040 {
 /*	border: 1px solid blue;
 	margin-top: 10px;		/**/
 	background-color: #ffffff;
 	padding: 3px;
 	font-size: 1.2em;
+    height: 260px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
-#vmt_grid th,#vht_grid th,#voc_grid th,#nox_grid th,#co_grid th,#co2_grid th {
+#grid_2016 th,#grid_2040 th {
 /*	border: 0.2px solid blue;   
 	border-collapse: collapse;   /**/
 	background-color: #bfcff3;
@@ -193,14 +196,21 @@ h3 {
 	font-size: 80%;
 }
 
-/*  made specific to data tables so that 'close' button (created by ExtJS) does not get unwitting borders  */
-#vmt_grid td,#vht_grid td,#voc_grid td,#nox_grid td,#co_grid td,#co2_grid td {
+
+#grid_2016 td:first-child,#grid_2040 td:first-child {
 /*	border: .2px solid purple;
 	border-collapse: collapse;   /**/
 	background-color: #f2f6fe;
 	padding: 3px;
+    text-align: left;
 }
-
+#grid_2016 td,#grid_2040 td {
+/*	border: .2px solid purple;
+	border-collapse: collapse;   /**/
+	background-color: #f2f6fe;
+	padding: 3px;
+    text-align: right;
+}
 /*
 td:hover {
 	cursor: text;
