--- a/vmtApp.css
+++ b/vmtApp.css
@@ -35,7 +35,7 @@ h3 {
 #wrapper {
 /*  position: absolute; /**/
     height:  595px;
-    width: 1250px;  /* was: 1200px */
+    width: 1100px;  /* was: 1200px */
 	margin: 20px auto;
 /*  margin-left: 50px;
     margin-right: 50px;
@@ -143,7 +143,7 @@ h3 {
 #right_container {	
 	float: right;  
 /*	margin-left: 570px;  /**/
-	width: 720px;   /* was: 670px; */
+	width: 550px;   /* was 670px; */
 	padding: 0 0 0 10px;
 	margin-top: 2px;	
 }
@@ -177,39 +177,38 @@ h3 {
 	display: none;
 }
 
-#grid_2016,#grid_2040 {
+#town_data_grid {
 /*	border: 1px solid blue;
 	margin-top: 10px;		/**/
 	background-color: #ffffff;
 	padding: 3px;
 	font-size: 1.2em;
     height: 260px;
-    overflow: scroll;
-    overflow-x: hidden;
 }
 
-#grid_2016 th,#grid_2040 th {
+#town_data_grid th {
 /*	border: 0.2px solid blue;   
 	border-collapse: collapse;   /**/
 	background-color: #bfcff3;
 	padding: 3px;
 	font-size: 80%;
+    width: 100px;
 }
-
-
-#grid_2016 td:first-child,#grid_2040 td:first-child {
+#town_data_grid td:first-child {
 /*	border: .2px solid purple;
 	border-collapse: collapse;   /**/
 	background-color: #f2f6fe;
 	padding: 3px;
     text-align: left;
+    width: 135px;
 }
-#grid_2016 td,#grid_2040 td {
+#town_data_grid td {
 /*	border: .2px solid purple;
 	border-collapse: collapse;   /**/
 	background-color: #f2f6fe;
 	padding: 3px;
     text-align: right;
+    width: 150px;
 }
 /*
 td:hover {
