--- a/vmtApp.css
+++ b/vmtApp.css
@@ -95,10 +95,11 @@ h3 {
 	opacity: 0.7;
 }
 
+/* Not sure why this div ID was used; this is, in fact, the legend text */
 #pointer {
     float: left;
     width: 170px;
-	color: #1d52c2;
+	color: black; /* was: #1d52c2 */
     margin-top: 365px;
     margin-left: 30px;
     line-height: normal;
@@ -180,6 +181,9 @@ h3 {
     margin-top: 20px;
     margin-right: 20px;
     border: 1.5px solid #1d2c2;
+    /* new */
+    height: 260px;
+    background-color: #daddee;
 }
 #town_data_grid {
 /*	border: 1px solid blue;
@@ -187,7 +191,7 @@ h3 {
 	background-color: #ffffff;
 	padding: 3px;
 	font-size: 1.2em;
-    height: 260px;
+    /* height: 260px; */
     padding-left: 30px;
     padding-top: 30px;
     background-color: #daddee;
@@ -219,6 +223,10 @@ h3 {
 #town_data_grid table caption {
     font-size: 20px;
     padding-bottom: 10px;
+}
+#town_data_grid_documentation_table {
+    padding-left: 30px;
+    padding-top: 10px;
 }
 
 /*
