--- a/vmtApp.css
+++ b/vmtApp.css
@@ -1,7 +1,36 @@
+/* Rules for "branding" */
+#banner{
+	position:relative;
+	height:100%;
+	left:2%;
+	top:-43px;
+	z-index:15;
+	border: none;
+}
+.pagetitle{
+    font-size: 17px;
+}
+.ctpsHeader{
+	height:59px;
+	background-color:white
+}
+.lightBlue{
+	height:27px;
+	width:100%;
+	background-color:#7DA1C4;
+	z-index:10;
+}
+.darkBlue{
+	height:16px;
+	width:100%;
+	background-color:rgb(13,72,127);
+	z-index:10;
+}
+/* End of rules for "branding" */
+
 /********************/
 /*	DOM Formatting  */
 /********************/
-
 html {
 	margin: 0;
 	padding: 0;
